--- a/src/components/Slogan/styles.module.css
+++ b/src/components/Slogan/styles.module.css
@@ -20,6 +20,9 @@
 }
 
 .img {
+  width: 100%;
+  height: auto;
+  display: block;
   margin-top: -145px;
 }
 
@@ -43,6 +46,9 @@
     font-size: 26px;
   }
   .img {
+    width: 100%;
+    height: auto;
+    display: block;
     margin-top: -35px;
   }
 }
